--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,17 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>hu.elte.projekteszkozok.csata</groupId>
-    <artifactId>hu-elte-projekteszkozok-csata</artifactId>
+    <artifactId>csata</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
