--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 	<groupId>hu.elte.projekteszkozok.csata</groupId>
 	<artifactId>csata</artifactId>
 	<version>1.0-SNAPSHOT</version>
+	<name>Projekteszkozok - Csata</name>
 
 	<dependencies>
 		<dependency>
@@ -41,7 +42,19 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.10.3</version>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 </project>
